54-Sep-2015 Laurent Duflot
	* data/data15_13TeV_p2419.ds: add current list of p2419 data samples

24-Sep-2015 Laurent Duflot
	* BuildSUSYObjects: do not run tau efficiency corrections on data
	* BuildSUSYObjects: find signal e/mu down to 10GeV instead of 25GeV
	* ZeroLeptonCRZ: lower second lepton pT cut to 10GeV
	* ZeroLeptonCRWT: option to use MET trigger and lepton of 10GeV
	* zerolepton.config: add CRWT/VRWT with MET trigger
	* zerolepton.config: only JET and MET systematics

23-Sep-2015 Laurent Duflot
	* BuildSUSYObjects: change isolation WP for photons to Cone20
	* PhysObjProxyUtils, PhysObjProxyFiller, ZeroLeptonCutVal, cutfile8TeV.dat: change jet pT cut from 40/60 GeV to 50 GeV
	* ZeroLeptonNTVars, SR & CR, PhysObjProxyUtils: add min dPhi between
	jets in bad Tile module and MET

22-Sep-2015 Laurent Duflot
	* INSTALL : update to SUSY,2.3.28, reference release for Oct FAR
	* tag as ZeroLeptonRun2-00-00-50

22-Sep-2015 Laurent Duflot
	* BuildSUSYObjects: change overlap removal
	* INSTALL, BuildSUSYObjects: update to SUSYTools-00-06-24-01 (SUSY,2.3.26)
	* revision 696196

22-Sep-2015 Laurent Duflot
	* BuildSUSYObjects: add tau truth matching
	* INSTALL, BuildSUSYObjects: update to SUSYTools-00-06-23-03 (SUSY,2.3.24a)
	* revision 696188

22-Sep-2015 Laurent Duflot
	* INSTALL, BuildSUSYObjects, config files: update to SUSYTools-00-06-22 (SUSY,2.3.23)
	* revision 696100

21-Sep-2015 Laurent Duflot
	* zerolepton.config: change JES NP set to 1 (to actually use a very reduced set)
	* revision: 695952

18-Sep-2015 Laurent Duflot
	* ZeroLeptonRunPeriod.h, JobBookeeping.cxx, launch_jobs_on_grid.py: add p2419
	* data/mc15_13TeV_signal_25ns_xAOD.ds : 25ns xAOD signal samples
	* makeDatasetList.py: update for signal samples, including AtlFastII

17-Sep-2015 Laurent Duflot
	* FilterUpdateMerge.py: wrong file was copied over on last update!
	allow to use pickle file as file input list
	* makeDatasetList.py: add r6895 to 25ns tags (not on wiki...)